# NewJucePluginTemplate

./: .gitattributes  .gitignore  BREAKING_CHANGES.md  CHANGE_LIST.md  LICENCE.md  README.md
.github/workflows/: juce_private_nightly_trigger.yml
JUCE/: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  remove-line-markers-harfbuzz.sh  update-JUCE.sh
JUCE/.github/workflows/: juce_private_build.yml  juce_private_push_trigger.yml
JUCE/docs/: CMake API.md
JUCE/examples/DemoRunner/: DemoRunner.jucer
JUCE/examples/GUI/: ComponentDiagnosticsDemo.h  ComponentTransformsDemo.h  FontFeaturesDemo.h  GraphicsDemo.h
JUCE/examples/Plugins/: ARAPluginDemo.h  SamplerPluginDemo.h
JUCE/extras/BinaryBuilder/: CMakeLists.txt
JUCE/extras/Projucer/: CMakeLists.txt  Projucer.jucer
JUCE/modules/juce_analytics/: juce_analytics.h
JUCE/modules/juce_animation/: juce_animation.h
JUCE/modules/juce_audio_basics/: juce_audio_basics.h
JUCE/modules/juce_audio_devices/: juce_audio_devices.h
JUCE/modules/juce_audio_formats/: juce_audio_formats.h
JUCE/modules/juce_audio_plugin_client/: juce_audio_plugin_client_AAX_utils.cpp  juce_audio_plugin_client_AU_2.mm  juce_audio_plugin_client_AUv3.mm  juce_audio_plugin_client_VST2.cpp  juce_audio_plugin_client_VST_utils.mm  juce_audio_plugin_client_version.cpp
JUCE/modules/juce_audio_utils/: juce_audio_utils.h
JUCE/modules/juce_box2d/: juce_box2d.h
JUCE/modules/juce_core/: juce_core.cpp  juce_core.h  juce_core_CompilationTime.cpp
JUCE/modules/juce_cryptography/: juce_cryptography.h
JUCE/modules/juce_data_structures/: juce_data_structures.h
JUCE/modules/juce_dsp/: juce_dsp.h
JUCE/modules/juce_events/: juce_events.h
JUCE/modules/juce_graphics/: juce_graphics.h
JUCE/modules/juce_gui_extra/: juce_gui_extra.cpp  juce_gui_extra.h
JUCE/modules/juce_osc/: juce_osc.h
JUCE/sdks/: .gitignore  SDKS-FOLDER-README.md  download-vst3-sdk.sh  juce_aax_sdk.cmake  vstfxstore.h
Plugin/: .gitignore  CMakeLists.txt  build_all.sh  build_all_macos.sh  build_all_win.bat  buildoffset.cmake  make_msvs_project.bat  make_xcode_project.sh  windows-build_all.sh
Plugin/resources/: sample.txt
Plugin/src/: PluginDSP.cpp
docs/doxygen/: header.html
docs/doxygen/css/: header.css
examples/Audio/: AudioWorkgroupDemo.h
examples/CMake/AudioPlugin/: CMakeLists.txt
examples/CMake/ConsoleApp/: CMakeLists.txt
examples/CMake/GuiApp/: CMakeLists.txt
examples/DemoRunner/: DemoRunner.jucer
examples/DemoRunner/JuceLibraryCode/: JuceHeader.h
examples/GUI/: AccessibilityDemo.h  AnimationAppDemo.h  AnimationEasingDemo.h  AnimatorsDemo.h  CodeEditorDemo.h  ComponentDemo.h  FontsDemo.h  LookAndFeelDemo.h  WebBrowserDemo.h  WidgetsDemo.h  WindowsDemo.h
examples/Plugins/: HostPluginDemo.h
examples/Utilities/: InAppPurchasesDemo.h  PushNotificationsDemo.h  SystemInfoDemo.h
extras/AudioPerformanceTest/: CMakeLists.txt
extras/AudioPluginHost/: CMakeLists.txt
extras/AudioPluginHost/Source/: HostStartup.cpp
extras/NetworkGraphicsDemo/: CMakeLists.txt
extras/NetworkGraphicsDemo/Source/: ClientComponent.h  SharedCanvas.h
extras/Projucer/: CMakeLists.txt
extras/UnitTestRunner/: CMakeLists.txt
modules/juce_analytics/: juce_analytics.h
modules/juce_audio_basics/: juce_audio_basics.h
modules/juce_audio_devices/: juce_audio_devices.h
modules/juce_audio_devices/midi_io/: juce_MidiDevices.h  juce_ScheduledEventThread.h  juce_WaitFreeListeners.cpp  juce_WaitFreeListeners.h
modules/juce_audio_devices/native/: juce_CoreMidi_mac.mm  juce_Midi_windows.cpp
modules/juce_audio_formats/: juce_audio_formats.h
modules/juce_audio_plugin_client/: juce_audio_plugin_client.h  juce_audio_plugin_client_AAX.cpp  juce_audio_plugin_client_AU_1.mm  juce_audio_plugin_client_AU_2.mm  juce_audio_plugin_client_LV2.cpp  juce_audio_plugin_client_Unity.cpp  juce_audio_plugin_client_VST2.cpp  juce_audio_plugin_client_VST3.cpp
modules/juce_audio_plugin_client/Standalone/: juce_StandaloneFilterWindow.h
modules/juce_audio_plugin_client/detail/: juce_CreatePluginFilter.h
modules/juce_audio_processors/: juce_audio_processors.h
modules/juce_audio_processors/utilities/: juce_PluginHostType.cpp  juce_PluginHostType.h
modules/juce_audio_processors_headless/: juce_audio_processors_headless.h
modules/juce_audio_processors_headless/format_types/: juce_ARAHosting.cpp  juce_AudioUnitPluginFormatImpl.h  juce_LV2PluginFormatImpl.h  juce_VST3PluginFormatHeadless.cpp  juce_VST3PluginFormatHeadless.h  juce_VSTPluginFormatHeadless.cpp  juce_VSTPluginFormatImpl.h
modules/juce_audio_processors_headless/processors/: juce_AudioProcessor.cpp
modules/juce_audio_processors_headless/utilities/: juce_AudioPluginExtensions.h
modules/juce_audio_utils/: juce_audio_utils.h
modules/juce_audio_utils/gui/: juce_MPEKeyboardComponent.cpp
modules/juce_audio_utils/native/: juce_AudioCDBurner_mac.mm  juce_BluetoothMidiDevicePairingDialogue_mac.mm
modules/juce_box2d/: juce_box2d.h
modules/juce_core/: juce_core.cpp  juce_core.h
modules/juce_core/containers/: juce_NamedValueSet.cpp  juce_NamedValueSet.h  juce_Variant.cpp  juce_Variant.h
modules/juce_core/json/: juce_JSONUtils.h
modules/juce_core/native/: juce_Files_mac.mm  juce_Network_mac.mm  juce_ObjCHelpers_mac.h  juce_SystemStats_linux.cpp  juce_SystemStats_windows.cpp
modules/juce_core/system/: juce_StandardHeader.h
modules/juce_core/text/: juce_String.cpp
modules/juce_core/threads/: juce_Thread.cpp
modules/juce_core/time/: juce_Time.h  (+3 more)
modules/juce_cryptography/: juce_cryptography.h
modules/juce_data_structures/: juce_data_structures.h
modules/juce_events/: juce_events.h
modules/juce_graphics/: juce_graphics.h
modules/juce_gui_basics/: juce_gui_basics.h
modules/juce_gui_extra/: juce_gui_extra.h
modules/juce_javascript/: juce_javascript.h
modules/juce_midi_ci/: juce_midi_ci.h
modules/juce_opengl/: juce_opengl.h
modules/juce_product_unlocking/: juce_product_unlocking.h
modules/juce_video/: juce_video.h
tools/: toolchain-clang-arm64.cmake  toolchain-clang-win32.cmake  toolchain-clang-win64.cmake
(+329 files in other folders)
